fixed table stretching

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -483,7 +483,7 @@ textarea {
   }
 
   .hideInScreen {
-    display: grid !important;
+    display: block !important;
     visibility: visible !important;
   }
 
